@@ -582,7 +582,6 @@ ns32k_gdbarch_init (struct gdbarch_info info, struct gdbarch_list *arches)
   set_gdbarch_deprecated_fix_call_dummy (gdbarch, ns32k_fix_call_dummy);
   set_gdbarch_deprecated_call_dummy_start_offset (gdbarch, 3);
   set_gdbarch_deprecated_call_dummy_breakpoint_offset (gdbarch, 15);
-  set_gdbarch_deprecated_use_generic_dummy_frames (gdbarch, 0);
   set_gdbarch_deprecated_pc_in_call_dummy (gdbarch, deprecated_pc_in_call_dummy_on_stack);
 
   /* Breakpoint info */
